kubernetes/central/frontend-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: staging-application
spec:
  parentRefs:
    - name: main-gateway
      namespace: apisix
      sectionName: http
  hostnames:
    - frontend.karim-portfolio.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
